# rust_timeseries

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rust_timeseries.pyi  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: doc_string_formatting.md
examples/Escanciano_Lobato/: Escanciano_Lobato_example.ipynb  README.md  robust_size_demo.ipynb
examples/el_intc_1973_2008/: Escanciano–Lobato-example.ipynb
rust_timeseries/: __init__.py  __init__.pyi  duration_models.pyi  hac_estimation.pyi  hac_extimation.pyi  rust_timeseries.pyi  statistical_tests.py  statistical_tests.pyi
src/: lib.rs  utils.rs
src/duration/: acd.rs  duration_errors.rs  errors.rs  mod.rs  params.rs  psi.rs
src/duration/core/: data.rs  forecasts.rs  guards.rs  init.rs  innovations.rs  mod.rs  options.rs  params.rs  psi.rs  shape.rs  units.rs  validation.rs  workspace.rs
src/duration/models/: acd.rs  mod.rs  model_internals.rs
src/inference/: errors.rs  hac.rs  hessian.rs  kernel.rs  mod.rs
src/optimization/: errors.rs  mod.rs  opt_errors.rs  optimizer.rs
src/optimization/loglik_optimizer/: adapter.rs  api.rs  builders.rs  finite_diff.rs  mod.rs  run.rs  traits.rs  types.rs  validation.rs
src/optimization/numerical_stability/: mod.rs  transformations.rs
src/statistical_tests/: errors.rs  escanciano_lobato.rs  mod.rs  validation.rs
tests/: integration_acd_pipline.rs
