[package]
name = "rust_timeseries"
version = "0.1.7"
edition = "2024"

[lib]
name = "rust_timeseries"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
argmin = "0.10.0"
argmin-math = {version = "0.4.0", features = ["ndarray_latest"]}
argmin-observer-slog = {version = "0.1.0", optional = true}
arima = "0.3.0"
finitediff = { version = "0.1.4", features = ["ndarray"] }
nalgebra = "0.34.0"
ndarray = "0.15"
numpy = "0.25.0"
pyo3 = {version = "0.25.1", features = ["extension-module"]}
statrs = "0.18.0"

[features]
default = []
obs_slog = ["dep:argmin-observer-slog"]
