[package]
name = "rust_timeseries"
version = "0.1.7"
edition = "2024"

[lib]
name = "rust_timeseries"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
anyhow = "1.0.99"
approx = "0.5.1"
argmin = "0.10.0"
argmin-math = { version = "0.4.0", features = ["ndarray_latest-nolinalg"] }
argmin-observer-slog = { version = "0.1.0", optional = true }
arima = "0.3.0"
finitediff = { version = "0.1.4", features = ["ndarray"] }
nalgebra = "0.34.0"
ndarray = "0.15"

# Python-related deps are OPTIONAL now
numpy = { version = "0.25.0", optional = true }
pyo3  = { version = "0.25.1", optional = true, features = ["extension-module"] }

rand   = "0.8.0"
statrs = { version = "0.18.0", features = ["rand"] }

[features]
default = []
obs_slog = ["dep:argmin-observer-slog"]

# Turn Python bindings on/off cleanly
python-bindings = ["dep:pyo3", "dep:numpy"]
