[package]
name = "rust_timeseries"
version = "1.1.0"
edition = "2024"

[lib]
name = "rust_timeseries"
crate-type = ["rlib", "cdylib"]
doctest = false

[dependencies]
anyhow = "1.0.99"
approx = "0.5.1"
argmin = "0.10.0"
argmin-math = { version = "0.4.0", features = ["ndarray_latest-nolinalg"] }
argmin-observer-slog = { version = "0.1.0", optional = true }
arima = "0.3.0"
finitediff = { version = "0.1.4", features = ["ndarray"] }
nalgebra = "0.34.0"
ndarray = "0.15"
rand = "0.8.0"
statrs = { version = "0.18.0", features = ["rand"] }

# ---- Python-only deps (OPTIONAL) ----
numpy = { version = "0.25.0", optional = true }
pyo3  = { version = "0.25.1", features = ["extension-module", "macros"], optional = true }

[features]
default = []
python-bindings = ["dep:numpy", "dep:pyo3"]
obs_slog = ["dep:argmin-observer-slog"]

