[build-system]
requires = ["maturin>=1.9", "setuptools", "wheel"]
build-backend = "maturin"

[project]
name = "rust_timeseries"
version = "1.0.0"
description = "Rust-implemented time-series utilities exposed to Python via PyO3."
authors = [{ name = "Dor Fuchs" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
]
urls = { Homepage = "https://github.com/mickwise/rust_timeseries", Issues = "https://github.com/mickwise/rust_timeseries/issues" }

[tool.maturin]
features = ["python-bindings"]
bindings = "pyo3"
module-name = "rust_timeseries._rust_timeseries"